# EauDev

./: Audit Response.txt  CODE_INTEGRITY_AUDIT_REPORT.md  EAUDEV_CODE_AUDIT_REPORT.md  EAUDEV_TOKEN_FIX_BRIEF.md  EAUDEV_UI_FIX_BRIEF(2).md  README.md  START_EAUDEV.command  UI_POLISH_CHANGES.md  pyproject.toml  requirements.txt  session_to_lora.py
archive/: core.py
eaudev/: __init__.py  __main__.py  cli.py  constants.py
eaudev/commands/run/: command.py  command_registry.py
eaudev/common/: __init__.py  banner.py  config.py  config_model.py  editor.py  exceptions.py
eaudev/hooks/: README.md  context_monitor.py  session_start.py
eaudev/memory/: __init__.py  consolidation.py  lora_lifecycle.py  memory_core.py
eaudev/memory/layers/: __init__.py  episodic.py  facts.py  fts5.py  graph.py  observation.py
eaudev/model_cards/: analyst-mcp-v1.yaml  archive-mcp-v3.yaml  extractor-mcp-v9.yaml  generate-hook-mcp-v1.yaml  memory-mcp-v1.yaml
eaudev/modules/: hooks.py  instructions.py  logging.py  mcp_client.py  memory.py  memory_store.py  model_registry.py  register_server_tool.py  server_registry.py  sessions.py  tool_permissions.py  voice_io.py
eaudev/modules/tool_call_parsers/: __init__.py  glm_parser.py  intern_parser.py  qwen35_parser.py
eaudev/ui/: prompt_session.py
eaudev/ui/components/: session_menu_panel.py  token_display.py  user_input_panel.py  user_menu_panel.py
generate_hook_mcp/: README.md  server.py
